# test-wheelhouse

poetry/: .python-version  Dockerfile  pyproject.toml
poetry/src/search_dicts/dicts/: base.py
poetry/tests/: test_search_dicts.py
