[tool.poetry]
name = "search-dicts"
version = "0.1.0"
description = ""
authors = ["Dmitry Gening <geningdm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pymorphy2 = "^0.8.0"
datrie = "^0.8.0"
minio = "^4.0"
dataclasses = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-cov = "^2.7"
mypy = "^0.720.0"
flake8 = "^3.7"
black = "=19.3b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
